# python-tripwire

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  versions.json
.claude/skills/adding-plugins/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: auto-tag.yml  ci.yml  release.yml  test.yml
0.10/: 404.html  index.html  objects.inv  sitemap.xml
0.10/guides/async/: index.html
0.10/guides/async-subprocess-plugin/: index.html
0.10/guides/asyncpg-plugin/: index.html
0.10/guides/configuration/: index.html
0.10/guides/database-plugin/: index.html
0.10/guides/http-plugin/: index.html
0.10/guides/installation/: index.html
0.10/reference/: index.html
0.10/search/: search_index.json
0.11/: 404.html  index.html  sitemap.xml
0.11/reference/: index.html
0.11/search/: search_index.json
0.12/: 404.html  index.html  sitemap.xml
0.12/reference/: index.html
0.12/search/: search_index.json
0.18/: 404.html  index.html  objects.inv  sitemap.xml
0.18/reference/: index.html
0.18/search/: search_index.json
0.19/: 404.html  index.html  sitemap.xml
0.19/reference/: index.html
0.19/search/: search_index.json
0.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2/reference/: index.html
0.2/search/: search_index.json
0.21/: 404.html  index.html  objects.inv  sitemap.xml
0.21/reference/: index.html
0.21/search/: search_index.json
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4/reference/: index.html
0.4/search/: search_index.json
docs/: index.md
docs/guides/: async-subprocess-plugin.md  async.md  asyncpg-plugin.md  boto3-plugin.md  celery-plugin.md  configuration.md  crypto-plugin.md  database-plugin.md  dns-plugin.md  elasticsearch-plugin.md  file-io-plugin.md  grpc-plugin.md  guard-mode.md  how-it-works.md  http-plugin.md  installation.md  jwt-plugin.md  logging-plugin.md  mcp-plugin.md  memcache-plugin.md  mock-plugin.md  mongo-plugin.md  native-plugin.md  pika-plugin.md  plugin-layers.md  popen-plugin.md  psycopg2-plugin.md  pytest-integration.md  quickstart.md  redis-plugin.md  smtp-plugin.md  socket-plugin.md  ssh-plugin.md  stateful-plugins.md  subprocess-plugin.md  threading.md  websocket-plugin.md  writing-plugins.md
docs/proposals/: 2026-04-26-tripwire-port-feedback.md
docs/reference/: async-subprocess-plugin.md  asyncpg-plugin.md  boto3-plugin.md  celery-plugin.md  configuration.md  crypto-plugin.md  database-plugin.md  dns-plugin.md  elasticsearch-plugin.md  errors.md  file-io-plugin.md  grpc-plugin.md  http-plugin.md  index.md  jwt-plugin.md  logging-plugin.md  mcp-plugin.md  memcache-plugin.md  mock-plugin.md  mongo-plugin.md  native-plugin.md  pika-plugin.md  popen-plugin.md  psycopg2-plugin.md  redis-plugin.md  smtp-plugin.md  socket-plugin.md  ssh-plugin.md  subprocess-plugin.md  verifier.md  websocket-plugin.md
examples/: conftest.py
examples/async_api/: README.md  app.py  test_app.py
examples/async_subprocess_example/: app.py  test_app.py
examples/asyncpg_example/: app.py  test_app.py
examples/boto3_service/: app.py  conftest.py  test_app.py
examples/celery_tasks/: app.py  test_app.py
examples/cli_tool/: README.md  app.py  test_app.py
examples/crypto_sign/: app.py  test_app.py
examples/database_example/: app.py  test_app.py
examples/dns_lookup/: app.py  test_app.py
examples/elasticsearch_search/: app.py  test_app.py
examples/email_service/: README.md  app.py  test_app.py
examples/file_processor/: app.py  test_app.py
examples/flask_api/: README.md  app.py  test_app.py
examples/grpc_service/: app.py  test_app.py
examples/jwt_auth/: app.py  test_app.py
examples/logging_example/: app.py  test_app.py
examples/mcp_tool/: app.py  test_app.py
examples/memcache_session/: app.py  test_app.py
examples/mongo_store/: app.py  test_app.py
examples/native_lib/: app.py  test_app.py
examples/pika_queue/: app.py  test_app.py
examples/popen_example/: app.py  test_app.py
examples/psycopg2_example/: app.py  test_app.py
examples/redis_cache/: README.md  app.py  test_app.py
examples/socket_example/: app.py  test_app.py
examples/ssh_remote/: app.py  test_app.py
examples/websocket_example/: app.py  test_app.py
scripts/: preflight.sh
src/bigfoot/: __init__.py  __init__.pyi  _base_plugin.py  _compat.py  _config.py  _context.py  _context_propagation.py  _errors.py  _firewall.py  _firewall_request.py  _glob.py  _guard.py  _match.py  _mock_plugin.py  _normalize.py  _patching.py  _recording.py  _registry.py  _state_machine_plugin.py  _timeline.py  _verifier.py  pytest_plugin.py
src/tripwire/: __init__.py  __init__.pyi  _base_plugin.py  _config.py  _context.py  _context_propagation.py  _errors.py  _firewall.py  _glob.py  _guard.py  _match.py  _mock_plugin.py  _patching.py  _path_resolution.py  _registry.py  _state_machine_plugin.py  _timeline.py  _verifier.py  pytest_plugin.py
tests/dogfood/: test_dogfood.py  test_readme_sections.py
tests/integration/: test_contextvar_propagation.py  test_default_guard_error.py  test_guard_canonical_name.py  test_integration.py  test_mock_e2e.py
tests/unit/: test_async_subprocess_plugin.py  test_asyncpg_plugin.py  test_base_plugin.py  test_bigfoot_migration_error.py  test_boto3_plugin.py  test_celery_plugin.py  test_config.py  test_context.py  test_context_propagation.py  test_crypto_plugin.py  test_database_plugin.py  test_default_guard_error.py  test_dns_plugin.py  test_elasticsearch_plugin.py  test_enforce_flag.py  test_errors.py  test_explicit_enable_error.py  test_file_io_plugin.py  test_firewall.py  test_firewall_errors.py  test_firewall_integration.py  test_firewall_toml.py  test_glob.py  test_grpc_plugin.py  test_guard.py  test_guard_new.py  test_http_plugin.py  test_import_site_mock.py  test_init.py  test_jwt_plugin.py  test_logging_plugin.py  test_match.py  test_mcp_plugin.py  test_memcache_plugin.py  test_mock_factory.py  test_mock_plugin.py  test_mongo_plugin.py  test_native_plugin.py  test_normalize.py  test_patching.py  (+22 more)
(+383 files in other folders)
